[gd_scene load_steps=4 format=3 uid="uid://dvgoy5fid7fr5"]

[ext_resource type="Script" path="res://addons/rivet/devtools/dock/dev_tab.gd" id="1_q8kto"]
[ext_resource type="PackedScene" uid="uid://bogw8dj8rr202" path="res://addons/rivet/devtools/elements/env_menu_button.tscn" id="2_e4lc1"]
[ext_resource type="Script" path="res://addons/rivet/devtools/elements/loading_button.gd" id="4_u02u4"]

[node name="Develop" type="MarginContainer"]
script = ExtResource("1_q8kto")

[node name="DevelopContent" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Environment" type="VBoxContainer" parent="DevelopContent"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DevelopContent/Environment"]
layout_mode = 2

[node name="Environment" type="Label" parent="DevelopContent/Environment/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Environment"

[node name="ReloadEnvButton" type="LinkButton" parent="DevelopContent/Environment/HBoxContainer"]
layout_mode = 2
text = "Reload"

[node name="EnvSelector" parent="DevelopContent/Environment" instance=ExtResource("2_e4lc1")]
layout_mode = 2

[node name="EnvironmentDescription" type="RichTextLabel" parent="DevelopContent/Environment"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Configure which backend to connect to. [url=https://rivet.gg]Learn more[/url]"
fit_content = true
scroll_active = false

[node name="WarningLabel" type="RichTextLabel" parent="DevelopContent/Environment"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Make sure you've deployed your game server. Using different versions can cause unexpected errors. [url=\"deploy_tab\"]Go to deploy.[/url]"
fit_content = true
scroll_active = false

[node name="HSeparator" type="HSeparator" parent="DevelopContent"]
layout_mode = 2

[node name="Game Server" type="VBoxContainer" parent="DevelopContent"]
layout_mode = 2

[node name="GameServer" type="Label" parent="DevelopContent/Game Server"]
layout_mode = 2
size_flags_horizontal = 3
text = "Local Game Server"

[node name="GSDescription" type="RichTextLabel" parent="DevelopContent/Game Server"]
unique_name_in_owner = true
layout_mode = 2
text = "Requires restart when game edited."
fit_content = true
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="DevelopContent/Game Server"]
layout_mode = 2

[node name="GSStart" type="Button" parent="DevelopContent/Game Server/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="GSStop" type="Button" parent="DevelopContent/Game Server/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Stop"

[node name="GSRestart" type="Button" parent="DevelopContent/Game Server/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Restart"

[node name="GSLogs" type="LinkButton" parent="DevelopContent/Game Server"]
layout_mode = 2
size_flags_horizontal = 4
text = "Show Logs"

[node name="HSeparator2" type="HSeparator" parent="DevelopContent"]
layout_mode = 2

[node name="Backend" type="VBoxContainer" parent="DevelopContent"]
layout_mode = 2

[node name="Backend" type="Label" parent="DevelopContent/Backend"]
layout_mode = 2
size_flags_horizontal = 3
text = "Backend"

[node name="BackendGenerateSdk" type="Button" parent="DevelopContent/Backend"]
unique_name_in_owner = true
layout_mode = 2
text = "Generate SDK"
script = ExtResource("4_u02u4")

[node name="BackendEditConfig" type="Button" parent="DevelopContent/Backend"]
layout_mode = 2
text = "Edit Config"

[connection signal="pressed" from="DevelopContent/Environment/HBoxContainer/ReloadEnvButton" to="." method="_on_reload_env_button_pressed"]
[connection signal="pressed" from="DevelopContent/Game Server/HBoxContainer/GSStart" to="." method="_on_gs_start_pressed"]
[connection signal="pressed" from="DevelopContent/Game Server/HBoxContainer/GSStop" to="." method="_on_gs_stop_pressed"]
[connection signal="pressed" from="DevelopContent/Game Server/HBoxContainer/GSRestart" to="." method="_on_gs_start_pressed"]
[connection signal="pressed" from="DevelopContent/Game Server/GSLogs" to="." method="_on_gs_logs_pressed"]
[connection signal="pressed" from="DevelopContent/Backend/BackendGenerateSdk" to="." method="_on_backend_generate_sdk_pressed"]
[connection signal="pressed" from="DevelopContent/Backend/BackendEditConfig" to="." method="_on_backend_edit_config_pressed"]
